# solid-octo-sniffle

./: .gitignore  README.md  config.yaml  instructions1.txt  instructions2.txt  job_roles.db  pyproject.toml
job_role_analyzer/: __init__.py  analyzer.py  config.py  data_models.py  db.py  embeddings.py  llm_interface.py  similarity.py
job_role_analyzer/prompts/jd_analysis/: extract_competencies.txt  normalize_jd.txt
pydantic_shim/: __init__.py
tests/: test_analyzer.py  test_config.py  test_db.py  test_launcher.py  test_llm_client.py  test_llm_interface.py  test_similarity.py
webapp/: __init__.py  dependencies.py  fallbacks.py  launcher.py  llm.py  main.py
webapp/static/: index.html  script.js  styles.css
